part1/1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
    - name: http
      protocol: TCP
      port: 8020
      targetPort: 8020
